corrected z-index to fix covering loading page

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -54,7 +54,7 @@ body {
 
 	&__bg {
 		background-color: rgba(0, 0, 0, 0.99);
-		z-index: 5;
+		// z-index: 5;
 	}
 
 	&__counter {
@@ -62,7 +62,7 @@ body {
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		z-index: 6;
+		// z-index: 6;
 		color: $white;
 	}
 }
@@ -172,6 +172,7 @@ body {
 	&__img {
 		width: 325px;
 		border-radius: 20px;
+		z-index: -1;
 	}
 }
 
